@@ -5656,9 +5656,14 @@ See lsp-keymap-prefix and pel-activate-f9-for-greek user-options."))
   (pel-eval-after-load which-key
     (which-key-mode 1)))
 
-(when pel-use-helm_descbinds
+(when (boundp 'pel-use-helm_descbinds)
+  (setq pel-use-helm-descbinds pel-use-helm_descbinds)
+  (message "\
+PEL CUSTOMIZATION WARNING: Please rename pel-use-helm_descbinds \
+to pel-use-helm-descbinds"))
+(when pel-use-helm-descbinds
   (pel-ensure-package helm-descbinds from: melpa)
-  (when (eq pel-use-helm_descbinds 'bind-to-F1-b)
+  (when (eq pel-use-helm-descbinds 'bind-to-F1-b)
     (global-set-key (kbd "C-h b") 'helm-descbinds))
   (define-key pel:keys "B" 'helm-descbinds-mode))
 
